fixed about us spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -674,7 +674,7 @@ iframe {
   .about_us_content {
     font-size: 25pt;
     margin: 0 20px;
-    height: 500px;
+    height: 700px;
     width: inherit;
   }
   .services {
